dataset1235/2025-2/805158916/users/674524038/executions/3435325918_4142573950.log
== SUBMISSION (2025-09-03 14:46:18)
-- CODE: 
qt = int(input("Quantidade de morangos: "))
if (qt >= 12):
  print(round(qt * 1.35,2))
else :
  print(round(qt * 1.50,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
Quantidade de morangos: 10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
Quantidade de morangos: 16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
Quantidade de morangos: 33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
Quantidade de morangos: 4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
Quantidade de morangos: 17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
Quantidade de morangos: 28.35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:46:04)
-- CODE: 
qt = int(input("Quantidade de morangos: "))
if (qt >= 12):
  print(round(qt * 1.35,2))
else :
  print(round(qt * 1.50,2))
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
Quantidade de morangos: 10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
Quantidade de morangos: 16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
Quantidade de morangos: 33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
Quantidade de morangos: 4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
Quantidade de morangos: 17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
Quantidade de morangos: 28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:45:51)
-- CODE: 
qt = int(input("Quantidade de morangos: "))
if (qt >= 12):
  print(round(qt * 1.35,2))
else :
  print(round(qt * 1.50,2))
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
Quantidade de morangos: 10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
Quantidade de morangos: 16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
Quantidade de morangos: 33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
Quantidade de morangos: 4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
Quantidade de morangos: 17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
Quantidade de morangos: 28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:44:43)
-- CODE: 
qt = int(input("Quantidade de morangos: "))
if (qt < 12):
  print(round(qt * 1.50,2))
else :
  print(round(qt * 1.35,2))
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
Quantidade de morangos: 10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
Quantidade de morangos: 16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
Quantidade de morangos: 33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
Quantidade de morangos: 4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
Quantidade de morangos: 17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
Quantidade de morangos: 28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:44:03)
-- CODE: 
qt = int(input("Quantidade de morangos: "))
if (qt < 12):
  print(round(qt * 1.50,2))
else (qt >= 12):
  print(round(qt * 1.35,2)
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:44:04)
-- CODE: 
qt = int(input("Quantidade de morangos: "))
if (qt < 12):
  print(round(qt * 1.50,2))
else (qt >= 12):
  print(round(qt * 1.35,2)
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:45:34)
-- CODE: 
qt = int(input("Quantidade de morangos: "))
if (qt >= 12):
  print(round(qt * 1.35,2))
else :
  print(round(qt * 1.50,2))
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
Quantidade de morangos: 10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
Quantidade de morangos: 16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
Quantidade de morangos: 33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
Quantidade de morangos: 4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
Quantidade de morangos: 17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
Quantidade de morangos: 28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:44:30)
-- CODE: 
qt = int(input("Quantidade de morangos: "))
if (qt < 12):
  print(round(qt * 1.50,2))
else :
  print(round(qt * 1.35,2)
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
-- ERROR:
File "XXXX", line 5
    print(round(qt * 1.35,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
-- ERROR:
File "XXXX", line 5
    print(round(qt * 1.35,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
-- ERROR:
File "XXXX", line 5
    print(round(qt * 1.35,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
-- ERROR:
File "XXXX", line 5
    print(round(qt * 1.35,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
-- ERROR:
File "XXXX", line 5
    print(round(qt * 1.35,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
-- ERROR:
File "XXXX", line 5
    print(round(qt * 1.35,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:42:58)
-- CODE: 
qt = int(input("Quantidade de morangos: "))
if (qt < 12):
  print(round(qt * 1.50,2))
else (qt >= 12):
  print(round(qt * 1.35,2)
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
-- ERROR:
File "XXXX", line 4
    else (qt >= 12):
         ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
